# wabble

./: .gitignore  LICENSE  readme.md
wabble_godot/: export_presets.cfg  project.godot
wabble_godot/assets/: HelvetiPixel.ttf.import  button.png.import  chatbannerseparator.png.import  clockface.png.import  closeicon.png.import  cornerbutton_center.png.import  cornerbutton_left.png.import  cornerbutton_right.png.import  dither.png.import  empty.png.import  eraseicon.png.import  erasericon.png.import  geticon.png.import  heart.aseprite  loading.png.import  namepart.png.import  note.png.import  notemask.png.import  penSizes.png.import  penSizes.tres  penicon.png.import  private.png.import  public.png.import  purplebanner.png.import  room_icons.png.import  sendicon.png.import  settings.png.import  signal.png.import  square.png.import
wabble_godot/assets/shaders/: background.gdshader  background.gdshader.uid
wabble_godot/nodes/: color_button.tscn  game_manager.tscn  icon_button.tscn  note.tscn  panel_header.tscn  room_button.tscn
wabble_godot/scenes/: chat.tscn  loading_screen.tscn  main_menu.tscn  main_menu.tscn4083131474.tmp  private_room.tscn  settings.tscn
wabble_godot/scripts/: chat.gd  chat.gd.uid  color_button.gd  color_button.gd.uid  game_manager.gd  game_manager.gd.uid  icon_button.gd  icon_button.gd.uid  level_transition.gd  level_transition.gd.uid  main_menu.gd  main_menu.gd.uid  note.gd  note.gd.uid  panel_header.gd  panel_header.gd.uid  private_room.gd  private_room.gd.uid  room_button.gd  room_button.gd.uid  scene_manager.gd  scene_manager.gd.uid  settings.gd  settings.gd.uid
wabble_server/: Cargo.toml
wabble_server/src/: global.rs  logger.rs  main.rs  responses.rs  room.rs
wabble_server/src/http/: mod.rs  socket.rs
wabble_server/src/settings/: cli.rs  mod.rs
