[package]
name = "wabble"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "macros", "ws"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
rand = "0.9.2"
random_color = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[profile.dist]
inherits = "release"
lto = "fat"
debug = false
strip = true
